# omni-moe

./: BACKWARD_FIX_SUMMARY.md  FINAL_FIX_EXPLANATION.md  LICENSE  Makefile  OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  README_zh.md  backward_error_analysis.md  debug_backward.py  optimization_analysis.md  pyproject.toml  verify_fix.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  performance_issue.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.yml  feature_support.yml  performance_optimization.yml
docs/: omni_expert.md  omni_mlp.md  omni_router.md
omni_moe/modules/: omni_moe.py
omni_moe/ops/triton/: activations.py  omni_expert.py  omni_mlp.py  omni_router.py  omni_scheduler.py  utils.py
omni_moe/triton/: omni_router.py  omni_router_optimized.py  utils.py  utils_optimized.py
tests/: test_expert.py  test_mlp.py  test_router.py  test_router_optimized.py  testing.py
